--- a/index.html
+++ b/index.html
@@ -997,11 +997,11 @@
                         <div class="stat-label">Years Experience</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number">50+</div>
+                        <div class="stat-number">30+</div>
                         <div class="stat-label">Projects Delivered</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number">15+</div>
+                        <div class="stat-number">10+</div>
                         <div class="stat-label">Industries Served</div>
                     </div>
                 </div>
@@ -1082,6 +1082,8 @@
                     <span class="skill-tag">Digital Business Transformation</span>
                     <span class="skill-tag">Change Management</span>
                     <span class="skill-tag">Stakeholder Management</span>
+                    <span class="skill-tag">Thought Leadership</span>
+                    <span class="skill-tag">Accenture Delivery methodologies</span>
                 </div>
             </div>
 
@@ -1090,7 +1092,7 @@
                 <div class="skill-tags">
                     <span class="skill-tag">Data Warehousing</span>
                     <span class="skill-tag">ETL</span>
-                    <span class="skill-tag">Data Modeling</span>
+                    <span class="skill-tag">Data Strategy</span>
                     <span class="skill-tag">Big Data</span>
                     <span class="skill-tag">Data Integration</span>
                     <span class="skill-tag">Data Governance</span>
@@ -1100,12 +1102,13 @@
             <div class="skill-category">
                 <h3>Analytics & Visualization</h3>
                 <div class="skill-tags">
+                    <span class="skill-tag">Analitics Solution Architecture</span>
                     <span class="skill-tag">Tableau</span>
                     <span class="skill-tag">Qlik Sense</span>
                     <span class="skill-tag">Power BI</span>
                     <span class="skill-tag">Business Intelligence</span>
-                    <span class="skill-tag">Data Analysis</span>
-                    <span class="skill-tag">Statistical Analysis</span>
+                    <span class="skill-tag">Data Analytics</span>
+                    <span class="skill-tag">Predictive Modeling and Analitics</span>
                     <span class="skill-tag">Dashboard Design</span>
                 </div>
             </div>
@@ -1113,15 +1116,16 @@
             <div class="skill-category">
                 <h3>Development & Integration</h3>
                 <div class="skill-tags">
-                    <span class="skill-tag">Informatica</span>
+                    <span class="skill-tag">Systems Integration</span>
                     <span class="skill-tag">Alteryx</span>
                     <span class="skill-tag">Splunk</span>
                     <span class="skill-tag">AWS</span>
                     <span class="skill-tag">Azure</span>
-                    <span class="skill-tag">Google Cloud</span>
+                    <span class="skill-tag">CI/CD</span>
                     <span class="skill-tag">Software Architecture</span>
-                    <span class="skill-tag">DevOps & Agile Methodology</span>
+                    <span class="skill-tag">DevOps</span>
                     <span class="skill-tag">SDLC</span>
+                    <span class="skill-tag">Test Execution and Management </span>
                 </div>
             </div>
 
@@ -1132,7 +1136,7 @@
                     <span class="skill-tag">Business Analysis</span>
                     <span class="skill-tag">Agile Methodology</span>
                     <span class="skill-tag">Strategic Planning</span>
-                    <span class="skill-tag">Requirements Analysis</span>
+                    <span class="skill-tag">Requirements Gathering & Analysis</span>
                 </div>
             </div>
 
@@ -1190,18 +1194,42 @@
                 <div class="project-title">Financial Data Integration</div>
                 <div class="project-company">Duke Energy</div>
                 <div class="project-description">
-                    Engineered comprehensive ETL processes to integrate financial budgeting data across merged business divisions, ensuring seamless data flow and reporting capabilities.
+                    Engineered comprehensive data integration (ETL) processes to integrate financial budgeting data across merged business divisions, ensuring seamless data flow and reporting capabilities.
                 </div>
             </div>
             <div class="project-card">
                 <div class="project-icon">🏥</div>
-                <div class="project-title">Healthcare Exchange Platform</div>
+                <div class="project-title">Healthcare Exchange Platform (Obamacare)</div>
                 <div class="project-company">Centers for Medicare & Medicaid</div>
                 <div class="project-description">
                     Implemented the Affordable Health Care Act marketplace, defining product requirements and serving as subject matter expert for health insurance plan filing applications.
                 </div>
             </div>
-            <!-- Projects from portfolio 4.html -->
+            <div class="project-card">
+                <div class="project-icon">🏥</div>
+                <div class="project-title">Remote Deposit Anywhere (RDA) Program Support</div>
+                <div class="project-company">Bank of America</div>
+                <div class="project-description">
+                   Assessment of the bank's enterprise data quality controls of key business elements to ensure readiness to implement the third Basel Accord (Basel III).
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-icon">🏥</div>
+                <div class="project-title">NextGen Member Experience</div>
+                <div class="project-company">Nvay Federal Credit Union (NFCU)</div>
+                <div class="project-description">
+                   Analyze NFCU and design its processes and systems, assessing the business model and its integration with technology. Assess current state, identify customer requirements, and define the future state and/or business solution. Research, gather and synthesize information.
+                </div>
+                <div class="project-card">
+                <div class="project-icon">🏥</div>
+                <div class="project-title">Advanced Actionable insights</div>
+                <div class="project-company">HighMark</div>
+                <div class="project-description">
+                   Data and Analytics Lead responsible for creating executive reporting dashboards used by the Gateway Health Board of Directors and senior executives to monitor business key performance indicators
+                </div>
+            </div>
+            </div>
+            <!-- Projects from portfolio 4.html
             <div class="project-card">
                 <div class="project-image">
                     <span>[Revolutionary Web App Screenshot]</span>
@@ -1250,6 +1278,7 @@
                 </div>
             </div>
         </div>
+    -->
     </section>
 
     <!-- Contact Section -->
