Updated portfolio design and content 2

--- a/index.html
+++ b/index.html
@@ -1220,6 +1220,7 @@
                 <div class="project-description">
                    Analyze NFCU and design its processes and systems, assessing the business model and its integration with technology. Assess current state, identify customer requirements, and define the future state and/or business solution. Research, gather and synthesize information.
                 </div>
+            </div>
                 <div class="project-card">
                 <div class="project-icon">🏥</div>
                 <div class="project-title">Advanced Actionable insights</div>
